--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "daisyui";
+
+/* @import 'tailwindcss';
+@plugin "daisyui"; */
 
 @layer base {
   :root {
